2004-05-11  Dominique Devriese  <devriese@kde.org>

	* Fix a crash reported by Maurizio: when debugging is enabled, and
	one attempts to move an object of a type that inherits
	ObjectABType, and depends on a non-movable object.

2004-05-03  Dominique Devriese  <devriese@kde.org>

	* Add a DrGeo test file using a locus

2004-05-03  Pino Toscano <toscano.pino@tiscali.it>

	* More work on Dr. Geo filter: now locuses should work, fix object
	visibility.

2004-04-30  Pino Toscano <toscano.pino@tiscali.it>

	* Add line and half-line by vector.

	* More work on Dr. Geo filter to support some types of On_curve
	points.

2004-04-30  Dominique Devriese  <devriese@kde.org>

	* properly generate python error output for compile errors.

	* make touch screens work by placing a mouseMoved call aboove
	every mouseClicked call.

2004-04-28  Dominique Devriese  <devriese@kde.org>

	* change the Qt CapStyle used for drawing locuses, conics and
	lines to FlatCap, which gives better results with large line
	widths.

	* Add two line styles: DashDotLine and DashDotDotLine

	* Remove the KigPainter::drawConic and KigPainter::drawCubic
	functions.  Conics and cubics are now drawn with the generic
	KigPainter::drawCurve function.  The performance penalty is not
	noticable for me, and I haven't been able to quantify it in any
	way, so I assume it negligible.  Cubics and conics drawing now
	correctly takes line styles into account.

2004-04-27  Pino Toscano <toscano.pino@tiscali.it>

	* Implement styles and visibility for KSeg filter.

2004-04-27  Dominique Devriese  <devriese@kde.org>

	* Make locuses work with the line styles, by drawing them with
	drawPolyline instead of drawing the individual segments ourselves.
	Thanks to Maurizio for the ideas and the help.

	* Fix a stupid bug in the last commit which caused Kig to crash on
	older Kig files.

	* Make it possible to switch the radical lines of a conic that are
	shown.

2004-04-24  Dominique Devriese  <devriese@kde.org>
