@@ -90,6 +90,8 @@ BOOST_PYTHON_MODULE_INIT( kig )
     .def( "lineReflection", &Transformation::lineReflection )
     .def( "castShadow", &Transformation::castShadow )
     .def( "projectiveRotation", &Transformation::projectiveRotation )
+    .def( "scalingOverPoint", &Transformation::scalingOverPoint )
+    .def( "scalingOverLine", &Transformation::scalingOverLine )
     .def( self * self )
     .def( self == self )
     .staticmethod( "identity" )
@@ -99,6 +101,8 @@ BOOST_PYTHON_MODULE_INIT( kig )
     .staticmethod( "lineReflection" )
     .staticmethod( "castShadow" )
     .staticmethod( "projectiveRotation" )
+    .staticmethod( "scalingOverPoint" )
+    .staticmethod( "scalingOverLine" )
     ;
 
   class_<ObjectImpType, boost::noncopyable>( "ObjectType", no_init )
