@@ -1,5 +1,8 @@
 2004-05-11  Dominique Devriese  <devriese@kde.org>
 
+	* Rename the two Transformation::scaling functions to
+	scalingOverPoint and scalingOverLine, and export them to python.
+
 	* Fix a crash reported by Maurizio: when debugging is enabled, and
 	one attempts to move an object of a type that inherits
 	ObjectABType, and depends on a non-movable object.
